--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
-                <img src="imagens/elemento1.png" alt="Logo">
+                <img src="Imagens/elemento1.png" alt="Logo">
                 Imobiliária Exemplo
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
